# triangle

./: CMakeLists.txt
asset/shader/: shader.fs  shader.vs
include/: application.h  camera.h  glad.h  layout.h  mesh.h  shader.h  transform.h
lib/glad/src/: glad.c
src/: application.cpp  glad.c  main.cpp
